# learning-opengl

./: .clangd  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: lighting.frag  lighting.vert  lightsource.frag  lightsource.vert  texture.frag  vert.vert
include/: camera.h  cube.h  quad.h  renderer.h  shader.h  shape.h  triangle.h
include/graphics/: camera.h  shader.h  texture.h
include/objects/: cube.h
shaders/: frag.glsl
src/: camera.cpp  cube.cpp  main.cpp  quad.cpp  renderer.cpp  shader.cpp  shape.cpp  triangle.cpp
src/core/: renderer.cpp
src/graphics/: shader.cpp  texture.cpp
src/objects/: cube.cpp
